Add audio configuration and remove ring
Added more detailed audio configuration including ao and filter
settings. Slightly modified other sections such as removing
anti-ringing and adding interpolation.

--- a/win10/mpv/mpv.conf
+++ b/win10/mpv/mpv.conf
@@ -4,19 +4,21 @@ gpu-api=vulkan
 dither-depth=auto
 dither=fruit
 
+#Only marginally better than f-band
 deband=yes
-deband-iterations=3
+deband-iterations=4
 deband-threshold=48
 deband-range=16
 
+#I've gained a lot of weight
 scale=ewa_lanczossharp
 dscale=ewa_lanczossharp
 cscale=ewa_lanczossoft
+scaler-lut-size=8
 
-scale-antiring=0.6
-dscale-antiring=0.6
-cscale-antiring=0.6
-
+#not as good as snoop dog's
+interpolation=yes
+blend-subtitle=yes
 video-sync=display-resample
 
 #hai, weaboo desu
@@ -24,6 +26,11 @@ alang=ja,jp,jpn,en,eng
 slang=en,eng,signs
 
 #LOUDNESS, THE INTENSITY OF SOUND
+ao=wasapi,pcm
+ad-lavc-downmix=yes
+ad-lavc-threads=2
+audio-channels=stereo
+audio-display=attachment
 volume=100
 volume-max=100
 audio-file-auto=fuzzy
@@ -41,9 +48,12 @@ sub-auto=fuzzy
 sub-gauss=1.0
 sub-gray=yes
 
+#I'm needy
+priority=high
+
 #I do it for the gram
 screenshot-format=png
 screenshot-high-bit-depth=no
 screenshot-png-compression=9
-screenshot-directory="C:\Pictures\mpvSS"
+screenshot-directory="C:\Pictures\mpvss"
 
