Add temporal scalling for interpolation
Trying out oversampling to see if it's a tolerable setting

--- a/win10/mpv/mpv.conf
+++ b/win10/mpv/mpv.conf
@@ -15,6 +15,7 @@ scale=ewa_lanczossharp
 dscale=ewa_lanczossharp
 cscale=ewa_lanczossoft
 scaler-lut-size=8
+tscale=oversample
 
 #not as good as snoop dog's
 interpolation=yes
