Alter screenshot savepath
Don't want to make the same mistake as on my previous PC and just dump
hundreds of caps to my much smaller C drive, throw that on the chunky
drive.

--- a/win10/mpv/mpv.conf
+++ b/win10/mpv/mpv.conf
@@ -56,5 +56,5 @@ priority=high
 screenshot-format=png
 screenshot-high-bit-depth=no
 screenshot-png-compression=9
-screenshot-directory="C:\Pictures\mpvss"
+screenshot-directory="D:\mpvss"
 
